# ares-s2client

./: .clang-format  .clang.in  .gitignore  .gitmodules  .lvimrc.in  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
src/: CMakeLists.txt  agent.cpp  agent.hpp  bot.cpp  bot.hpp  config.hpp.in  debug.cpp  debug.hpp  decision.cpp  decision.hpp  functional.hpp  geometry.cpp  geometry.hpp  interfaces.hpp  main.cpp  predicates.hpp  utility.hpp
tests/: CMakeLists.txt  mock_function.hpp  test_functional.cpp  test_utility.cpp
